@startuml
class City{
    name: str
}

abstract class KPI {
   id_kpi: str
   name: str
   category: str
   unitText: str
   description: str [0..1]
   provider: str [0..1]
   calculationFrequency: str [0..1]
   minThreshold: float [0..1]
   maxThreshold: float [0..1]
   hasCategoryLabel: bool
   categoryLabelDictionary: Dict[int, str] [0..1]
}

class KPIValue {
   kpiValue: float
   timestamp: datetime
   categoryLabel: str [0..1]
}


abstract class Visualisation {
   xposition: int
   yposition: int
   width: int
   height: int
   chartType: str
   title: str
   i: str
   section: str
}

class Table {
}

class PieChart {
}

class BarChart {
}

class StatChart {
   unit: str
}

class LineChart {
   xtitle: str
   ytitle: str
   color: str
}

class TableColumn {
name: str
}

class Map {
}

KPI --> "*" KPIValue: values
City --> "*" KPI: kpis

Visualisation "*" <--  KPI: visualizedBy

Visualisation <|-- Table
Visualisation <|-- PieChart
Visualisation <|-- BarChart
Visualisation <|-- StatChart
Visualisation <|-- LineChart
Visualisation <|-- Map

class Dashboard {
code: str
}


City --> "*" Dashboard: has
Dashboard --> "*" Visualisation: consistsOf
Table --> "*" TableColumn: shows


abstract class MapData {
title: str
}

class GeoJson {
   data: str
}

class WMS {
   url: str
   name: str
}

City --> "*" MapData: hasMapData

GeoJson --|> MapData
WMS --|> MapData

Map "*"<-- MapData: isDisplayedOnMap


@enduml